logs/dag_id=job_intelligence_pipeline/run_id=manual__2026-04-06T18:46:01.105447+00:00/task_id=scrape_jobs/attempt=1.log
[2026-04-06T18:46:01.758+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: job_intelligence_pipeline.scrape_jobs manual__2026-04-06T18:46:01.105447+00:00 [queued]>
[2026-04-06T18:46:01.764+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: job_intelligence_pipeline.scrape_jobs manual__2026-04-06T18:46:01.105447+00:00 [queued]>
[2026-04-06T18:46:01.764+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 2
[2026-04-06T18:46:01.774+0000] {taskinstance.py:2192} INFO - Executing <Task(PythonOperator): scrape_jobs> on 2026-04-06 18:46:01.105447+00:00
[2026-04-06T18:46:01.779+0000] {standard_task_runner.py:60} INFO - Started process 1964 to run task
[2026-04-06T18:46:01.784+0000] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'job_intelligence_pipeline', 'scrape_jobs', 'manual__2026-04-06T18:46:01.105447+00:00', '--job-id', '21', '--raw', '--subdir', 'DAGS_FOLDER/job_scraper_dag.py', '--cfg-path', '/tmp/tmpseds867z']
[2026-04-06T18:46:01.786+0000] {standard_task_runner.py:88} INFO - Job 21: Subtask scrape_jobs
[2026-04-06T18:46:01.840+0000] {task_command.py:423} INFO - Running <TaskInstance: job_intelligence_pipeline.scrape_jobs manual__2026-04-06T18:46:01.105447+00:00 [running]> on host 8407a0e2353e
[2026-04-06T18:46:01.922+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='saurabh' AIRFLOW_CTX_DAG_ID='job_intelligence_pipeline' AIRFLOW_CTX_TASK_ID='scrape_jobs' AIRFLOW_CTX_EXECUTION_DATE='2026-04-06T18:46:01.105447+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-04-06T18:46:01.105447+00:00'
[2026-04-06T18:46:01.924+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/job_scraper_dag.py", line 15, in scrape_jobs
    from scraper import fetch_jobs_from_api, save_jobs_to_db
  File "/opt/airflow/scripts/scraper.py", line 22
    RAPIDAPI_KEY = "RAPIDAPI_KEY = "de2fb04390msh0e2f1b13965fb1cp1ea271jsn23b006f3279"
                                    ^
SyntaxError: invalid syntax
[2026-04-06T18:46:01.935+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=job_intelligence_pipeline, task_id=scrape_jobs, execution_date=20260406T184601, start_date=20260406T184601, end_date=20260406T184601
[2026-04-06T18:46:01.944+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 21 for task scrape_jobs (invalid syntax (scraper.py, line 22); 1964)
[2026-04-06T18:46:01.955+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2026-04-06T18:46:01.976+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
